fix: adjust gap

--- a/source/sass/partials/_modules.scss
+++ b/source/sass/partials/_modules.scss
@@ -29,7 +29,7 @@ $module-line-height: 48px;
     border-radius: 3px;
     filter: drop-shadow(0 3px 2px rgba(0, 0, 0, 0.05));
     display: flex;
-    gap: 8px;
+    gap: 16px;
     text-align: left;
 
     transition: 100ms background ease;
